testsuite/tests/properties/invalid_predicate/common.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}

class FooNode implements Node[FooNode] {
}

@abstract class BaseExample: FooNode {
    var1: LogicVar
    var2: LogicVar

    @ignore_unused fun pred1(n: Entity[FooNode]): Bool = n.is_null
    @ignore_unused fun pred2(n: Entity[FooNode], b: Bool = false): Bool =
        n.is_null and b
}
